ContentFilterMac is broken when NE_FILTER_SOURCE is enabled. <rdar://problem/15978793> and https://bugs.webkit.org/show_bug.cgi?id=131445

Reviewed by Andy Estes.

No new tests (Not a tested feature).

* platform/mac/ContentFilterMac.mm:
(WebCore::ContentFilter::needsMoreData): Only consider m_neFilterSourceStatus if m_neFilterSource exists.
(WebCore::ContentFilter::didBlockData): Ditto.

Canonical link: https://commits.webkit.org/149508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167023 268f45cc-cd09-0410-ab3c-d52691b4dbfc